# django-local-settings

./: .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  commands.py  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
local_settings/: __init__.py  __main__.py  base.py  checker.py  color_printer.py  exc.py  loader.py  settings.py  strategy.py  tests.py  types.py  util.py
local_settings/tests/: local.cfg  local.derived.cfg  test_checker.py  test_color_printer.py  test_loader.py  test_local_setting.py  test_secret_setting.py  test_settings.py  test_util.py
src/jsonesque/: __init__.py  decoder.py  encoder.py  obj.py  scanner.py
src/jsonish/: README.md  __init__.py  decoder.py  encoder.py  exc.py  obj.py  scanner.py
src/jsonish/src/jsonish/: __init__.py  __main__.py  decoder.py  encoder.py  exc.py  obj.py  scanner.py
src/jsonish/tests/: test_jsonish.py
src/local_settings/: __init__.py  __main__.py  base.py  checker.py  color_printer.py  exc.py  json.py  loader.py  settings.py  strategy.py  types.py  util.py
tests/: local.cfg  local.derived.cfg  test_checker.py  test_color_printer.py  test_env_setting.py  test_jsonesque.py  test_jsonish.py  test_loader.py  test_local_setting.py  test_secret_setting.py  test_settings.py  test_strategy.py  test_util.py
