[tool.poetry]
name = "django-local-settings"
version = "2.0a5"
description = "Define Django settings in config files and/or via environment variables"
authors = ["Wyatt Baldwin <self@wyattbaldwin.com>"]
license = "MIT"
repository = "https://github.com/wylee/django-local-settings"
readme = "README.md"
keywords = ["django", "settings", "local", "env", "environment"]

packages = [
    { include = "local_settings", from = "src" }
]

include = [
    "docs/*",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.6"
arrow = "^1.1.0"
Django = ">=2.2"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
black = "*"
"com.wyattbaldwin.make-release" = "*"
coverage = "*"
flake8 = "*"
runcommands = "*"
sphinx = "*"
tox = "*"

[tool.poetry.scripts]
make-local-settings = "local_settings:make_local_settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
